modules/gdscript/tests/scripts/analyzer/errors/if_var_use_in_elif.gd
func test():
    if var x = 100:
        print("t")
    elif x > 0:
        print("f")
